@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD xfce4-session-9999.ebuild 787 RMD160 d166ec8655a1025a8f9430bdb52e5a0c0726522d SHA1 2ee053f000f36e0e4175f585fa526cc6cec1ebcd SHA256 246f165dd235304fe1f6b1cb97e4a13162505878f818757bd8d187f3bc485d7d
-MISC ChangeLog 438 RMD160 a5829bda95c021f03119b86e9b2c220e3d2108a4 SHA1 41d4cdfc0315b7fcd6dfcbebe3b55ef23306ab04 SHA256 1f8c0a3c001ccbc443be57925b3e0b905122a5807b29ef344c2f2eaaf73e5281
+EBUILD xfce4-session-9999.ebuild 826 RMD160 c8b2dd6c7cf043b24203a05cb4f881f2fe2cd5e6 SHA1 dd9803fb375f568d0b1c32b1ed2675cc1ed7829d SHA256 9f82863591a5b59f70fd4a81e1a48023f3710a906dd0f32ada844ca3291e8fa1
+MISC ChangeLog 562 RMD160 ae48acb4e93ec1bc7b47daea8baaf2ceb87fc763 SHA1 41811e4bfbde2ce36749f9e05210d014ee4b354e SHA256 961803610679faf6c7221a0df489859efc1e8f9ee2ae84d80a1b1326e5b10300
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkWJFIACgkQKhnDs22gwa/qlwCg7tiTzz3D1YZuOjrgjvOUe5wb
-NVMAoMN++Qohh1ceX1L5QZnBusDzvmgb
-=zJia
+iEYEARECAAYFAkkXXcwACgkQKhnDs22gwa9SjQCeJ9qNQ7RyMSGB6mY1kUVHb3Jz
+FZ4AoJq+0Sl+0m7a3Rz9VOmZWh/DXSmN
+=ytm2
 -----END PGP SIGNATURE-----
